1st implementation - still breaking

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,7 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# exlude testing of libraries we are using
+# currently includes BAML, smolagents, langgraph, langfuse, litellm
+shoulders/
