--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "langfuse>=3.0.5",
     "langgraph>=0.4.10",
     "litellm>=1.73.1",
-    "smolagents>=1.19.0",
+    "python-dotenv>=1.1.1",
+    "smolagents[audio,docker,e2b,gradio,litellm,mcp,openai,telemetry,toolkit,transformers,vision]>=1.19.0",
 ]
 
 [dependency-groups]
@@ -17,4 +18,9 @@ dev = [
     "mypy>=1.16.1",
     "pytest>=8.4.1",
     "ruff>=0.12.0",
+]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.14",
+    "mkdocstrings[python]>=0.29.1",
 ]
